[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Character Creation/Character Creation.gd" type="Script" id=1]

[node name="MarginContainer" type="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 86.0
margin_bottom = 332.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 86.0
margin_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 86.0
margin_bottom = 80.0

[node name="HumanContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 86.0
margin_bottom = 24.0

[node name="Human" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HumanContainer"]
margin_right = 86.0
margin_bottom = 24.0
text = "Human"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkarmianContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 86.0
margin_bottom = 52.0

[node name="Skarmian" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/SkarmianContainer4"]
margin_right = 86.0
margin_bottom = 24.0
text = "Skarmian"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DerfinContainer5" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 86.0
margin_bottom = 80.0

[node name="Derfin" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/DerfinContainer5"]
margin_right = 86.0
margin_bottom = 24.0
text = "Derfin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 86.0
margin_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3"]
margin_right = 86.0
margin_bottom = 80.0

[node name="ArcheologistContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 86.0
margin_bottom = 24.0

[node name="Archeologist" type="CheckBox" parent="VBoxContainer/HBoxContainer3/VBoxContainer/ArcheologistContainer"]
margin_right = 86.0
margin_bottom = 24.0
text = "Human"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MercenaryContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 28.0
margin_right = 86.0
margin_bottom = 52.0

[node name="Mercenary" type="CheckBox" parent="VBoxContainer/HBoxContainer3/VBoxContainer/MercenaryContainer"]
margin_right = 86.0
margin_bottom = 24.0
text = "Skarmian"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SageContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 56.0
margin_right = 86.0
margin_bottom = 80.0

[node name="Sage" type="CheckBox" parent="VBoxContainer/HBoxContainer3/VBoxContainer/SageContainer"]
margin_right = 86.0
margin_bottom = 24.0
text = "Derfin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 86.0
margin_bottom = 308.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 77.0
margin_bottom = 140.0

[node name="StrengthContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 77.0
margin_bottom = 20.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/StrengthContainer"]
margin_right = 65.0
margin_bottom = 20.0

[node name="Strength" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer/StrengthContainer/MarginContainer"]
margin_right = 65.0
margin_bottom = 20.0
text = "Strength"

[node name="Strength" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/StrengthContainer"]
margin_left = 69.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 17.0
text = "1"

[node name="LegerityContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 77.0
margin_bottom = 44.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/LegerityContainer"]
margin_right = 63.0
margin_bottom = 20.0

[node name="Legerity" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer/LegerityContainer/MarginContainer2"]
margin_right = 63.0
margin_bottom = 20.0
text = "Legerity"

[node name="Legerity" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/LegerityContainer"]
margin_left = 67.0
margin_top = 3.0
margin_right = 75.0
margin_bottom = 17.0
text = "1"

[node name="BalanceContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 77.0
margin_bottom = 68.0

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/BalanceContainer"]
margin_right = 62.0
margin_bottom = 20.0

[node name="Balance" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer/BalanceContainer/MarginContainer3"]
margin_right = 62.0
margin_bottom = 20.0
text = "Balance"

[node name="Balance" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/BalanceContainer"]
margin_left = 66.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 17.0
text = "1"

[node name="BeliefContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 72.0
margin_right = 77.0
margin_bottom = 92.0

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/BeliefContainer"]
margin_right = 49.0
margin_bottom = 20.0

[node name="Belief" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer/BeliefContainer/MarginContainer4"]
margin_right = 49.0
margin_bottom = 20.0
text = "Belief"

[node name="Belief" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/BeliefContainer"]
margin_left = 53.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 17.0
text = "1"

[node name="TrincinContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 96.0
margin_right = 77.0
margin_bottom = 116.0

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/TrincinContainer"]
margin_right = 55.0
margin_bottom = 20.0

[node name="Trincin" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer/TrincinContainer/MarginContainer5"]
margin_right = 55.0
margin_bottom = 20.0
text = "Trincin"

[node name="Trincin" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/TrincinContainer"]
margin_left = 59.0
margin_top = 3.0
margin_right = 67.0
margin_bottom = 17.0
text = "1"

[node name="WisdomContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 77.0
margin_bottom = 140.0

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/WisdomContainer"]
margin_right = 65.0
margin_bottom = 20.0

[node name="Wisdom" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer/WisdomContainer/MarginContainer6"]
margin_right = 65.0
margin_bottom = 20.0
text = "Wisdom"

[node name="Wisdom" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/WisdomContainer"]
margin_left = 69.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 17.0
text = "1"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 86.0
margin_bottom = 332.0
text = "Begin"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HumanContainer/Human" to="." method="_on_Race_Changed" binds= [ "Human" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/SkarmianContainer4/Skarmian" to="." method="_on_Race_Changed" binds= [ "Skarmian" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/DerfinContainer5/Derfin" to="." method="_on_Race_Changed" binds= [ "Derfin" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VBoxContainer/ArcheologistContainer/Archeologist" to="." method="_on_Role_Changed" binds= [ "Archeologist" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VBoxContainer/MercenaryContainer/Mercenary" to="." method="_on_Role_Changed" binds= [ "Mercenary" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VBoxContainer/SageContainer/Sage" to="." method="_on_Role_Changed" binds= [ "Sage" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/StrengthContainer/MarginContainer/Strength" to="." method="_on_Stats_Changed" binds= [ "Strength" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/LegerityContainer/MarginContainer2/Legerity" to="." method="_on_Stats_Changed" binds= [ "Legerity" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/BalanceContainer/MarginContainer3/Balance" to="." method="_on_Stats_Changed" binds= [ "Balance" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/BeliefContainer/MarginContainer4/Belief" to="." method="_on_Stats_Changed" binds= [ "Belief" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/TrincinContainer/MarginContainer5/Trincin" to="." method="_on_Stats_Changed" binds= [ "Trincin" ]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/WisdomContainer/MarginContainer6/Wisdom" to="." method="_on_Stats_Changed" binds= [ "Wisdom" ]]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Begin_pressed"]
